[package]
name = "howto"
version = "0.1.0"
edition = "2021"
description = "Ask in plain words, get a shell command typed at your prompt"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ureq = { version = "2", features = ["json"] }

[profile.release]
lto = true
strip = true
